boltffi_backend/tests/snapshots/swift__swift_target_renders_class_handles_and_methods.snap
---
source: boltffi_backend/tests/swift.rs
assertion_line: 95
expression: "rendered_fixture(\"exports/kotlin_class_handles\")"
---
===== DemoFFI.swift =====
// Auto-generated by BoltFFI. Do not edit.
// swiftlint:disable all
// swiftformat:disable all

import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public final class Engine {
    @usableFromInline let handle: UInt64

    @usableFromInline init(handle: UInt64) {
        self.handle = handle
    }

    deinit {
        boltffi_release_class_demo_engine(handle)
    }

    public init(value: Int32) {
        self.handle = boltffi_init_class_demo_engine_new(value)
    }

    public static func version() -> UInt32 {
        return boltffi_method_class_demo_engine_version()
    }

    public func value() -> Int32 {
        return boltffi_method_class_demo_engine_value(self.handle)
    }

    public func swap(other: Engine) -> Engine {
        return Engine(handle: boltffi_method_class_demo_engine_swap(self.handle, other.handle))
    }

    public func maybeSwap(other: Engine?) -> Engine? {
        let boltffiHandle = boltffi_method_class_demo_engine_maybe_swap(self.handle, other?.handle ?? 0)
        return boltffiHandle == 0 ? nil : Engine(handle: boltffiHandle)
    }
}
