boltffi_backend/tests/snapshots/swift__swift_target_renders_closure_parameters.snap
---
source: boltffi_backend/tests/swift.rs
assertion_line: 218
expression: "rendered_fixture(\"exports/closure_parameter\")"
---
===== DemoFFI.swift =====
import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public func install(callback: @escaping (UInt32) -> UInt32) {
    final class __BoltffiCallbackClosure {
        let invoke: (UInt32) -> UInt32
        init(_ invoke: @escaping (UInt32) -> UInt32) { self.invoke = invoke }
    }
    let __boltffi_callback_box = __BoltffiCallbackClosure(callback)
    let __boltffi_callback_context = Unmanaged.passRetained(__boltffi_callback_box).toOpaque()
    let __boltffi_callback_call: @convention(c) (UnsafeMutableRawPointer?, UInt32) -> UInt32 = { context, arg0 in
        return Unmanaged<__BoltffiCallbackClosure>.fromOpaque(context!).takeUnretainedValue().invoke(arg0)
    }
    let __boltffi_callback_release: @convention(c) (UnsafeMutableRawPointer?) -> Void = { context in
        guard let context = context else { return }
        Unmanaged<__BoltffiCallbackClosure>.fromOpaque(context).release()
    }
    boltffi_function_demo_install(__boltffi_callback_call, __boltffi_callback_context, __boltffi_callback_release)
}
