boltffi_backend/tests/snapshots/swift__swift_target_renders_custom_types_through_representations.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_fixture(\"exports/custom_type_functions\")"
---
===== DemoFFI.swift =====
import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public func keepTimestamp(value: Timestamp) -> Timestamp {
    let __boltffi_value_bytes = boltffiEncode { __boltffi_value_writer in __boltffi_value_writer.writeI64(value) }
    return __boltffi_value_bytes.withUnsafeBufferPointer { __boltffi_value_buffer in
        let __boltffi_result = boltffi_function_demo_keep_timestamp(__boltffi_value_buffer.baseAddress!, UInt(__boltffi_value_buffer.count))
        defer { boltffi_free_buf(__boltffi_result) }
        return boltffiDecodeOwnedBuf(__boltffi_result.ptr, Int(__boltffi_result.len)) { __boltffi_reader in __boltffi_reader.readI64() }
    }
}

public typealias Timestamp = Int64
