boltffi_backend/tests/snapshots/swift__swift_target_renders_direct_vector_closure_parameters.snap
---
source: boltffi_backend/tests/swift.rs
assertion_line: 223
expression: "rendered_fixture(\"exports/direct_vector_closure_parameter\")"
---
===== DemoFFI.swift =====
// Auto-generated by BoltFFI. Do not edit.
// swiftlint:disable all
// swiftformat:disable all

import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public func install(callback: @escaping ([UInt32]) -> UInt32) {
    final class BoltFFICallbackClosure {
        let invoke: ([UInt32]) -> UInt32
        init(_ invoke: @escaping ([UInt32]) -> UInt32) { self.invoke = invoke }
    }
    let boltffiCallbackBox = BoltFFICallbackClosure(callback)
    let boltffiCallbackContext = Unmanaged.passRetained(boltffiCallbackBox).toOpaque()
    let boltffiCallbackCall: @convention(c) (UnsafeMutableRawPointer?, UnsafePointer<UInt32>?, UInt) -> UInt32 = { context, arg0_ptr, arg0_len in
        let arg0_count = Int(arg0_len)
        let arg0_value = arg0_count == 0 ? [] : Array(UnsafeBufferPointer(start: arg0_ptr!, count: arg0_count))
        return Unmanaged<BoltFFICallbackClosure>.fromOpaque(context!).takeUnretainedValue().invoke(arg0_value)
    }
    let boltffiCallbackRelease: @convention(c) (UnsafeMutableRawPointer?) -> Void = { context in
        guard let context = context else { return }
        Unmanaged<BoltFFICallbackClosure>.fromOpaque(context).release()
    }
    boltffi_function_demo_install(boltffiCallbackCall, boltffiCallbackContext, boltffiCallbackRelease)
}
