boltffi_backend/tests/snapshots/swift__swift_target_renders_encoded_function_stack.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_source(SourceFixture::many([\"records/person\", \"enums/shape\",\n\"enums/message\", \"exports/encoded_functions\",]))"
---
===== DemoFFI.swift =====
import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public struct Person: Hashable, Equatable, Sendable {
    public var name: String

    public init(name: String) {
        self.name = name
    }

    @inlinable static func decode(from reader: inout WireReader) -> Person {
        Person(name: reader.readString())
    }

    @inlinable func encode(to writer: inout WireWriter) {
        writer.writeString(self.name)
    }
}

public enum Shape: Hashable, Equatable, Sendable {
    case label(String)

    @inlinable static func decode(from reader: inout WireReader) -> Shape {
        let tag = reader.readU32()
        switch tag {
        case 0:
            return .label(reader.readString())
        default:
            fatalError("Invalid Shape tag: \(tag)")
        }
    }

    @inlinable func encode(to writer: inout WireWriter) {
        switch self {
        case let .label(field0):
            writer.writeU32(0)
            writer.writeString(field0)
        }
    }
}

public enum Message: Hashable, Equatable, Sendable {
    case empty
    case text(String)
    case named(name: String)

    @inlinable static func decode(from reader: inout WireReader) -> Message {
        let tag = reader.readU32()
        switch tag {
        case 0:
            return .empty
        case 1:
            return .text(reader.readString())
        case 2:
            return .named(name: reader.readString())
        default:
            fatalError("Invalid Message tag: \(tag)")
        }
    }

    @inlinable func encode(to writer: inout WireWriter) {
        switch self {
        case .empty:
            writer.writeU32(0)
        case let .text(field0):
            writer.writeU32(1)
            writer.writeString(field0)
        case let .named(name):
            writer.writeU32(2)
            writer.writeString(name)
        }
    }
}

public func echoBytes(bytes: Data) -> Data {
    let __boltffi_bytes_bytes = boltffiEncode { __boltffi_bytes_writer in __boltffi_bytes_writer.writeBytes(bytes) }
    return __boltffi_bytes_bytes.withUnsafeBufferPointer { __boltffi_bytes_buffer in
        let __boltffi_result = boltffi_function_demo_echo_bytes(__boltffi_bytes_buffer.baseAddress!, UInt(__boltffi_bytes_buffer.count))
        defer { boltffi_free_buf(__boltffi_result) }
        return boltffiDecodeOwnedBuf(__boltffi_result.ptr, Int(__boltffi_result.len)) { __boltffi_reader in __boltffi_reader.readBytes() }
    }
}

public func keepPerson(person: Person) -> Person {
    let __boltffi_person_bytes = boltffiEncode { __boltffi_person_writer in person.encode(to: &__boltffi_person_writer) }
    return __boltffi_person_bytes.withUnsafeBufferPointer { __boltffi_person_buffer in
        let __boltffi_result = boltffi_function_demo_keep_person(__boltffi_person_buffer.baseAddress!, UInt(__boltffi_person_buffer.count))
        defer { boltffi_free_buf(__boltffi_result) }
        return boltffiDecodeOwnedBuf(__boltffi_result.ptr, Int(__boltffi_result.len)) { __boltffi_reader in Person.decode(from: &__boltffi_reader) }
    }
}

public func keepShape(shape: Shape) -> Shape {
    let __boltffi_shape_bytes = boltffiEncode { __boltffi_shape_writer in shape.encode(to: &__boltffi_shape_writer) }
    return __boltffi_shape_bytes.withUnsafeBufferPointer { __boltffi_shape_buffer in
        let __boltffi_result = boltffi_function_demo_keep_shape(__boltffi_shape_buffer.baseAddress!, UInt(__boltffi_shape_buffer.count))
        defer { boltffi_free_buf(__boltffi_result) }
        return boltffiDecodeOwnedBuf(__boltffi_result.ptr, Int(__boltffi_result.len)) { __boltffi_reader in Shape.decode(from: &__boltffi_reader) }
    }
}

public func echoMessage(message: Message) -> Message {
    let __boltffi_message_bytes = boltffiEncode { __boltffi_message_writer in message.encode(to: &__boltffi_message_writer) }
    return __boltffi_message_bytes.withUnsafeBufferPointer { __boltffi_message_buffer in
        let __boltffi_result = boltffi_function_demo_echo_message(__boltffi_message_buffer.baseAddress!, UInt(__boltffi_message_buffer.count))
        defer { boltffi_free_buf(__boltffi_result) }
        return boltffiDecodeOwnedBuf(__boltffi_result.ptr, Int(__boltffi_result.len)) { __boltffi_reader in Message.decode(from: &__boltffi_reader) }
    }
}
