boltffi_backend/tests/snapshots/swift__swift_target_renders_encoded_record_stack.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_source(SourceFixture::many([\"enums/role\", \"records/encoded_user\",\n\"exports/encoded_record_functions\",]))"
---
===== DemoFFI.swift =====
import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public struct User: Hashable, Equatable, Sendable {
    public var name: String
    public var age: UInt32
    public var role: Role
    public var nickname: String?
    public var tags: [String]

    public init(
        name: String,
        age: UInt32,
        role: Role,
        nickname: String?,
        tags: [String]
    ) {
        self.name = name
        self.age = age
        self.role = role
        self.nickname = nickname
        self.tags = tags
    }

    @inlinable static func decode(from reader: inout WireReader) -> User {
        User(
            name: reader.readString(),
            age: reader.readU32(),
            role: Role(rawValue: reader.readU8())!,
            nickname: reader.readOptional { reader in reader.readString() },
            tags: reader.readArray { reader in reader.readString() }
        )
    }

    @inlinable func encode(to writer: inout WireWriter) {
        writer.writeString(self.name)
        writer.writeU32(self.age)
        writer.writeU8(self.role.rawValue)
        writer.writeOptional(self.nickname) { writer, __boltffi_value_0 in writer.writeString(__boltffi_value_0) }
        writer.writeArray(self.tags) { writer, __boltffi_value_0 in writer.writeString(__boltffi_value_0) }
    }
}

public enum Role: UInt8, Hashable, Sendable, CaseIterable {
    case admin = 1
    case guest = 2

    @usableFromInline init(fromC c: UInt8) {
        self = Role(rawValue: c)!
    }

    @usableFromInline var cValue: UInt8 {
        rawValue
    }
}

public func echoUser(user: User) -> User {
    let __boltffi_user_bytes = boltffiEncode { __boltffi_user_writer in user.encode(to: &__boltffi_user_writer) }
    return __boltffi_user_bytes.withUnsafeBufferPointer { __boltffi_user_buffer in
        let __boltffi_result = boltffi_function_demo_echo_user(__boltffi_user_buffer.baseAddress!, UInt(__boltffi_user_buffer.count))
        defer { boltffi_free_buf(__boltffi_result) }
        return boltffiDecodeOwnedBuf(__boltffi_result.ptr, Int(__boltffi_result.len)) { __boltffi_reader in User.decode(from: &__boltffi_reader) }
    }
}
