boltffi_backend/tests/snapshots/swift__swift_target_renders_fallible_functions_as_throwing_functions.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_fixture(\"exports/fallible_returns\")"
---
===== DemoFFI.swift =====
import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public struct Point: Hashable, Equatable, Sendable {
    public var x: Int32
    public var y: Int32

    public init(x: Int32, y: Int32) {
        self.x = x
        self.y = y
    }

    @usableFromInline init(fromC c: ___Point) {
        self.init(x: c.x, y: c.y)
    }

    @usableFromInline var cValue: ___Point {
        ___Point(x: x, y: y)
    }
}

public enum MathError: Int32, Hashable, Sendable, CaseIterable, Error {
    case invalidInput = 0

    @usableFromInline init(fromC c: Int32) {
        self = MathError(rawValue: c)!
    }

    @usableFromInline var cValue: Int32 {
        rawValue
    }
}

public func checkedAdd(left: Int32, right: Int32) throws -> Int32 {
    var __boltffi_result: Int32 = Int32()
    let __boltffi_error = boltffi_function_demo_checked_add(left, right, &__boltffi_result)
    if __boltffi_error.ptr != nil || Int(__boltffi_error.len) != 0 {
        defer { boltffi_free_buf(__boltffi_error) }
        throw boltffiDecodeOwnedBuf(__boltffi_error.ptr, Int(__boltffi_error.len)) { __boltffi_error_reader in MathError(rawValue: __boltffi_error_reader.readI32())! }
    }
    return __boltffi_result
}

public func parsePoint(text: String) throws -> Point {
    let __boltffi_text_bytes = boltffiEncode { __boltffi_text_writer in __boltffi_text_writer.writeString(text) }
    return try __boltffi_text_bytes.withUnsafeBufferPointer { __boltffi_text_buffer in
        var __boltffi_result: ___Point = ___Point()
        let __boltffi_error = boltffi_function_demo_parse_point(__boltffi_text_buffer.baseAddress!, UInt(__boltffi_text_buffer.count), &__boltffi_result)
        if __boltffi_error.ptr != nil || Int(__boltffi_error.len) != 0 {
            defer { boltffi_free_buf(__boltffi_error) }
            throw boltffiDecodeOwnedBuf(__boltffi_error.ptr, Int(__boltffi_error.len)) { __boltffi_error_reader in MathError(rawValue: __boltffi_error_reader.readI32())! }
        }
        return Point(fromC: __boltffi_result)
    }
}

public func validateName(name: String) throws -> String {
    let __boltffi_name_bytes = boltffiEncode { __boltffi_name_writer in __boltffi_name_writer.writeString(name) }
    return try __boltffi_name_bytes.withUnsafeBufferPointer { __boltffi_name_buffer in
        var __boltffi_result: FfiBuf_u8 = FfiBuf_u8()
        let __boltffi_error = boltffi_function_demo_validate_name(__boltffi_name_buffer.baseAddress!, UInt(__boltffi_name_buffer.count), &__boltffi_result)
        if __boltffi_error.ptr != nil || Int(__boltffi_error.len) != 0 {
            defer { boltffi_free_buf(__boltffi_error) }
            throw boltffiDecodeOwnedBuf(__boltffi_error.ptr, Int(__boltffi_error.len)) { __boltffi_error_reader in MathError(rawValue: __boltffi_error_reader.readI32())! }
        }
        defer { boltffi_free_buf(__boltffi_result) }
        return boltffiDecodeOwnedBuf(__boltffi_result.ptr, Int(__boltffi_result.len)) { __boltffi_reader in __boltffi_reader.readString() }
    }
}
