boltffi_backend/tests/snapshots/swift__swift_target_renders_maps_through_shared_codec.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_fixture(\"exports/map_functions\")"
---
===== DemoFFI.swift =====
import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public func keepScores(scores: [String: Int32]) -> [String: Int32] {
    let __boltffi_scores_bytes = boltffiEncode { __boltffi_scores_writer in __boltffi_scores_writer.writeMap(scores, { __boltffi_scores_writer, __boltffi_value_0 in __boltffi_scores_writer.writeString(__boltffi_value_0) }, { __boltffi_scores_writer, __boltffi_value_1 in __boltffi_scores_writer.writeI32(__boltffi_value_1) }) }
    return __boltffi_scores_bytes.withUnsafeBufferPointer { __boltffi_scores_buffer in
        let __boltffi_result = boltffi_function_demo_keep_scores(__boltffi_scores_buffer.baseAddress!, UInt(__boltffi_scores_buffer.count))
        defer { boltffi_free_buf(__boltffi_result) }
        return boltffiDecodeOwnedBuf(__boltffi_result.ptr, Int(__boltffi_result.len)) { __boltffi_reader in __boltffi_reader.readMap({ __boltffi_reader in __boltffi_reader.readString() }, { __boltffi_reader in __boltffi_reader.readI32() }) }
    }
}

public func keepScoreHistory(history: [String: [Int32]]) -> [String: [Int32]] {
    let __boltffi_history_bytes = boltffiEncode { __boltffi_history_writer in __boltffi_history_writer.writeMap(history, { __boltffi_history_writer, __boltffi_value_0 in __boltffi_history_writer.writeString(__boltffi_value_0) }, { __boltffi_history_writer, __boltffi_value_1 in __boltffi_history_writer.writeArray(__boltffi_value_1) { __boltffi_history_writer, __boltffi_value_2 in __boltffi_history_writer.writeI32(__boltffi_value_2) } }) }
    return __boltffi_history_bytes.withUnsafeBufferPointer { __boltffi_history_buffer in
        let __boltffi_result = boltffi_function_demo_keep_score_history(__boltffi_history_buffer.baseAddress!, UInt(__boltffi_history_buffer.count))
        defer { boltffi_free_buf(__boltffi_result) }
        return boltffiDecodeOwnedBuf(__boltffi_result.ptr, Int(__boltffi_result.len)) { __boltffi_reader in __boltffi_reader.readMap({ __boltffi_reader in __boltffi_reader.readString() }, { __boltffi_reader in __boltffi_reader.readArray { __boltffi_reader in __boltffi_reader.readI32() } }) }
    }
}
